--- a/BullsAndCows/BullsAndCows.csproj
+++ b/BullsAndCows/BullsAndCows.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BullsCows.cs" />
+    <Compile Include="Computer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
